--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Controller\Home\HomeController.cs" />
     <Compile Include="Controller\Auth\IAuthController.cs" />
     <Compile Include="Controller\Home\IHomeController.cs" />
+    <Compile Include="Controller\IStudySubjectController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
+    <Compile Include="Controller\StudySubjectController.cs" />
     <Compile Include="Controller\StudySubjectList\IStudySubjectListController.cs" />
     <Compile Include="Controller\StudySubjectList\StudySubjectListController.cs" />
     <Compile Include="Controller\University\IUniversityController.cs" />
@@ -143,6 +145,12 @@
     <Compile Include="View\HomeView.Designer.cs">
       <DependentUpon>HomeView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Individual\StudySubjectView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Individual\StudySubjectView.Designer.cs">
+      <DependentUpon>StudySubjectView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Individual\UniversityView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +206,9 @@
     <EmbeddedResource Include="View\HomeView.resx">
       <DependentUpon>HomeView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Individual\StudySubjectView.resx">
+      <DependentUpon>StudySubjectView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Individual\UniversityView.resx">
       <DependentUpon>UniversityView.cs</DependentUpon>
     </EmbeddedResource>
@@ -218,6 +229,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Controller\StudySubject\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
