--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -222,7 +222,8 @@
     <EmbeddedResource Include="View\StudySubjectListView.resx">
       <DependentUpon>StudySubjectListView.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Migrations\Data\Rating.csv" />
+    <None Include="Migrations\Data\Review.csv" />
+    <None Include="Migrations\Data\StudyProgram.csv" />
     <None Include="Migrations\Data\StudySubject.csv" />
     <None Include="Migrations\Data\User.csv" />
     <None Include="packages.config" />
